--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,12 @@
     <artifactId>jackson-databind</artifactId>
     <version>2.15.0-rc1</version>
 </dependency>
-
+  <dependency>
+    <groupId>org.apache.jena</groupId>
+    <artifactId>apache-jena-libs</artifactId>
+    <type>pom</type>
+    <version>4.7.0</version>
+  </dependency>
       
 	</dependencies>
 
