--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,14 @@
     <properties>
         <java.version>17</java.version>
     </properties>
+    <repositories>
+        <repository>
+            <id>oracleReleases</id>
+            <name>Oracle Released Java Packages</name>
+            <url>http://download.oracle.com/maven</url>
+            <layout>default</layout>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -104,6 +112,12 @@
             <artifactId>ontapi</artifactId>
             <version>3.0.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.jpos</groupId>
+            <artifactId>jpos</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
