--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=9170
+server.port=9171
 
-virtuoso.endpoint=
+virtuoso.endpoint=https://sls.kg-alliance.org/virtuoso/sparql
 virtuoso.password=
 virtuoso.user=
