--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,13 @@
             <version>2.1.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <plugins>
