update virtuoso url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ server.port=9170
 
 virtuoso.password=
 virtuoso.user=
-virtuoso.endpoint=http://localhost:8890/sparql
+virtuoso.endpoint=https://sls.kg-alliance.org/virtuoso/sparql
