add cache for ontologies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ server.port=9170
 
 virtuoso.password=
 virtuoso.user=
-virtuoso.endpoint=
+virtuoso.endpoint=https://sls.kg-alliance.org/virtuoso/sparql
