Improve VirtuosoServiceImpl to retreive all triples from the ontology

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 server.port=9170
 
+# virtuoso.password=sls#209
+# virtuoso.user=dba
+# virtuoso.endpoint=http://51.178.139.80:8890/sparql
+
 virtuoso.password=
 virtuoso.user=
 virtuoso.endpoint=https://sls.kg-alliance.org/virtuoso/sparql
